--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -9,14 +9,14 @@ $outsideNamespaceMarker: '.___outside-namespace';
 //== User Menu
 //
 //##
-$user-menu-color: $gray-darker;
-$user-menu-line-height: 60px;
-$user-menu-minify-breakpoint: 1250px;
-$user-menu-bg-hover: $gray-lighter;
-$user-menu-dropdown-bg: $crm-white;
-$user-menu-dropdown-link-color: $gray-darker;
-$user-menu-dropdown-link-color-hover: $gray-darker;
-$user-menu-dropdown-link-bg-hover: $gray-lighter;
+$chr-user-menu-color: $gray-darker;
+$chr-user-menu-line-height: 60px;
+$chr-user-menu-minify-breakpoint: 1250px;
+$chr-user-menu-bg-hover: $gray-lighter;
+$chr-user-menu-dropdown-bg: $crm-white;
+$chr-user-menu-dropdown-link-color: $gray-darker;
+$chr-user-menu-dropdown-link-color-hover: $gray-darker;
+$chr-user-menu-dropdown-link-bg-hover: $gray-lighter;
 
 
 //== Steps
