PCHR-2622: Fix alignment of logo

--- a/org.civicrm.bootstrapcivihr/scss/overrides/crm/_link-home.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/crm/_link-home.scss
@@ -1,8 +1,7 @@
 .crm-link-home {
-  position: relative;
-  top: 2px;
-
   .chr_logo {
     font-size: 17px;
+    margin-right: 5px;
+    vertical-align: sub;
   }
 }
