--- a/contactsummary/views/mainTemplate.html
+++ b/contactsummary/views/mainTemplate.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-6">
       <div ng-include="ContactSummaryCtrl.partials.keyDetails"></div>
