--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-absence-types-available-balance.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-absence-types-available-balance.html
@@ -5,9 +5,11 @@
         <th>Type</th>
         <th>
           Available balance
-          <button class="info-button">
-            <i class="fa fa-info-circle"></i>
-          </button>
+          <help-text title="Avaiable Balance">
+            <p>This table displays a list of the different absence types and the remaining balance per type.
+            As a default, Available Balance displays the number of days/hours available in the current period for each absence type (Admin users can change the display options for available balances, e.g., to only show hours, depending on needs).
+            The calculation automatically deducts all approved and awaiting approval requests from the remaining leave entitlement on display.</p>
+          </help-text>
         </th>
       </tr>
     </thead>
