--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
@@ -12,6 +12,7 @@
       <hr />
       <leave-widget-absence-types-amount-taken
         title="Sickness"
+        leave-name="sick leaves"
         absence-period="leaveWidget.currentAbsencePeriod"
         absence-types="leaveWidget.sicknessAbsenceTypes"
         contact-id="leaveWidget.contactId"
