--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
@@ -50,6 +50,7 @@
                 <td ng-repeat="day in month.month.days track by day.date">
                   <leave-calendar-day
                     contact-data="day.contactsData[contact.id]"
+                    support-data="month.supportData"
                     ng-class="{ 'chr_leave-calendar__item--disabled': !day.enabled }"
                   ></leave-calendar-day>
                 </td>
