PCHR-2654: Hide leave widget elements when the contact has no contract

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
@@ -4,25 +4,30 @@
   </header>
   <div class="panel-body">
     <crm-loading show="!leaveWidget.loading.component && !leaveWidget.loading.childComponents">
-      <leave-widget-absence-types-available-balance
-        absence-period="leaveWidget.currentAbsencePeriod"
-        absence-types="leaveWidget.absenceTypes"
-        contact-id="leaveWidget.contactId"
-      ></leave-widget-absence-types-available-balance>
-      <hr />
-      <leave-widget-absence-types-amount-taken
-        title="Sickness"
-        leave-name="sick leaves"
-        absence-period="leaveWidget.currentAbsencePeriod"
-        absence-types="leaveWidget.sicknessAbsenceTypes"
-        contact-id="leaveWidget.contactId"
-        leave-request-statuses="leaveWidget.leaveRequestStatuses"
-      ></leave-widget-absence-types-amount-taken>
-      <hr />
-      <leave-widget-next-leave
-        contact-id="leaveWidget.contactId"
-        leave-request-statuses="leaveWidget.leaveRequestStatuses"
-      ></leave-widget-next-leave>
+      <div ng-if="leaveWidget.jobContract">
+        <leave-widget-absence-types-available-balance
+          absence-period="leaveWidget.currentAbsencePeriod"
+          absence-types="leaveWidget.absenceTypes"
+          contact-id="leaveWidget.contactId"
+        ></leave-widget-absence-types-available-balance>
+        <hr />
+        <leave-widget-absence-types-amount-taken
+          title="Sickness"
+          leave-name="sick leaves"
+          absence-period="leaveWidget.currentAbsencePeriod"
+          absence-types="leaveWidget.sicknessAbsenceTypes"
+          contact-id="leaveWidget.contactId"
+          leave-request-statuses="leaveWidget.leaveRequestStatuses"
+        ></leave-widget-absence-types-amount-taken>
+        <hr />
+        <leave-widget-next-leave
+          contact-id="leaveWidget.contactId"
+          leave-request-statuses="leaveWidget.leaveRequestStatuses"
+        ></leave-widget-next-leave>
+      </div>
+      <div ng-if="!leaveWidget.jobContract">
+        <p>There is no leave data to display</p>
+      </div>
     </crm-loading>
   </div>
 </div>
