PCHR-2654: Only display absence types from job contract entitlements

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
@@ -9,6 +9,7 @@
           absence-period="leaveWidget.currentAbsencePeriod"
           absence-types="leaveWidget.absenceTypes"
           contact-id="leaveWidget.contactId"
+          job-contract="leaveWidget.jobContract"
         ></leave-widget-absence-types-available-balance>
         <hr />
         <leave-widget-absence-types-amount-taken
