--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget.html
@@ -22,6 +22,7 @@
         ></leave-widget-absence-types-amount-taken>
         <hr />
         <leave-widget-next-leave
+          absence-types="leaveWidget.absenceTypes"
           contact-id="leaveWidget.contactId"
           leave-request-statuses="leaveWidget.leaveRequestStatuses"
         ></leave-widget-next-leave>
