PCHR-2861: Follow AngularJS style guide in controllers

--- a/contactsummary/views/include/keyDetails.html
+++ b/contactsummary/views/include/keyDetails.html
@@ -1,5 +1,5 @@
 <section class="panel panel-default panel-default-plain panel--key-details"
-         ng-controller="KeyDetailsCtrl as KeyDetails">
+         ng-controller="KeyDetailsController as KeyDetails">
     <header class="panel-heading">
         <h2 class="panel-title">Key Details</h2>
         <hr>
