--- a/contactsummary/views/include/keyDates.html
+++ b/contactsummary/views/include/keyDates.html
@@ -1,4 +1,4 @@
-<section class="panel panel-default panel-default-plain-inverted panel--key-dates" ng-controller="KeyDatesCtrl as KeyDates">
+<section class="panel panel-default panel-default-plain-inverted panel--key-dates" ng-controller="KeyDatesController as KeyDates">
     <header class="panel-heading">
         <h2 class="panel-title">Key Dates</h2>
         <hr>
