PCHR-2713: Load absence types and their calculation units

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
@@ -1,2 +1,10 @@
-<contract-entitlements contact-id="entitlements.contactId"></contract-entitlements>
-<annual-entitlements contact-id="entitlements.contactId"></annual-entitlements>
+<crm-loading show="!entitlements.loading.component">
+  <contract-entitlements
+    absence-types="entitlements.absenceTypes"
+    contact-id="entitlements.contactId"
+  ></contract-entitlements>
+  <annual-entitlements
+    absence-types="entitlements.absenceTypes"
+    contact-id="entitlements.contactId"
+  ></annual-entitlements>
+</crm-loading>
