PCHR-2713: Display calculation units for contract entitlements

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/contract-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/contract-entitlements.html
@@ -18,7 +18,9 @@
             <td>{{contract.position}}</td>
             <td>{{contract.start_date}}</td>
             <td>{{contract.end_date}}</td>
-            <td ng-repeat="absence in contract.absences">{{absence.amount}}</td>
+            <td ng-repeat="absence in contract.absences">
+              {{absence.amount | timeUnitApplier:absence.calculation_unit}}
+            </td>
           </tr>
         </tbody>
       </table>
