--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlements.html
@@ -14,7 +14,13 @@
         </thead>
         <tbody>
           <tr ng-repeat="absencePeriod in entitlements.absencePeriods">
-            <td>{{absencePeriod.period}}</td>
+            <td>
+              {{absencePeriod.title}}
+              <button class="btn btn-default"
+                ng-click="entitlements.openAnnualEntitlementChangeLog(absencePeriod.id)">
+                <i class="fa fa-clock-o"></i>
+              </button>
+            </td>
             <td ng-repeat="entitlement in absencePeriod.entitlements">
               <span ng-if="entitlement">
                 {{entitlement.amount | timeUnitApplier:entitlement.calculation_unit}}
