--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/common.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/common.html
@@ -24,7 +24,9 @@
 <div class="row">
   <div class="col-xs-12 form-horizontal">
     <div class="form-group">
-      <label class="col-sm-4 control-label required-mark">From Date</label>
+      <label class="col-sm-4 control-label required-mark">
+        From Date{{ detailsTab.selectedAbsenceType.calculation_unit_name === 'hours' ? '/Time' : ''}}
+      </label>
       <div class="col-xs-6 col-sm-4 chr_leave-request-date-picker-container">
         <div class="input-group">
           <input
@@ -43,7 +45,8 @@
       <div class="col-xs-6 col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
         <crm-loading
           show="!detailsTab.loading.fromDayTypes"
-          class="chr_leave-request-modal__small_spinner">
+          class="chr_leave-request-modal__small_spinner"
+          ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'days'">
           <div class="crm_custom-select crm_custom-select--full">
             <select
               class="no-select2"
@@ -56,54 +59,132 @@
               <option ng-disabled="!detailsTab.isRole('admin') &&
                 (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
                 value="">Select</option>
-              dayType{{dayType}}
             </select>
             <span class="crm_custom-select__arrow"></span>
           </div>
         </crm-loading>
+        <div
+          class="crm_custom-select crm_custom-select--full"
+          ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'hours'">
+          <select
+            class="no-select2"
+            ng-model="detailsTab.uiOptions.times.from.time"
+            ng-disabled="detailsTab.uiOptions.times.from.disabled"
+            timepicker-select
+            timepicker-select-time-from="detailsTab.uiOptions.times.from.min"
+            timepicker-select-time-to="detailsTab.uiOptions.times.from.max"
+            timepicker-select-interval="15"
+            timepicker-select-placeholder="Select time"
+          ></select>
+          <span class="crm_custom-select__arrow"></span>
+        </div>
       </div>
     </div>
   </div>
 </div>
-</div>
-<div class="row" ng-hide="!detailsTab.uiOptions.multipleDays">
+<div class="row" ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'hours'">
   <div class="col-xs-12 form-horizontal">
     <div class="form-group">
-      <label class="col-sm-4 control-label required-mark">To Date</label>
-      <div class="col-xs-6 col-sm-4 chr_leave-request-date-picker-container">
-        <div class="input-group">
-          <input
-            type="text"
-            class="form-control"
-            uib-datepicker-popup
-            datepicker-options="detailsTab.uiOptions.date.to.options"
-            show-button-bar="false"
-            ng-model="detailsTab.uiOptions.toDate"
-            is-open="detailsTab.uiOptions.date.to.show"
-            ng-readonly="true"
-            ng-disabled="!detailsTab.isRole('admin') &&
-              (detailsTab.isMode('view') || !detailsTab.request.from_date || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-            ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.toDate, 'to')"/>
+      <label class="col-sm-4 control-label required-mark">Deduction</label>
+      <div class="col-xs-6 col-sm-4" ng-if="detailsTab.uiOptions.times.from.maxAmount">
+        <time-amount-picker
+          time-amount-picker-value='detailsTab.uiOptions.times.from.amount'
+          time-amount-picker-min-amount='0.25'
+          time-amount-picker-max-amount='detailsTab.uiOptions.times.from.maxAmount'
+          time-amount-picker-interval='15'
+        ></time-amount-picker>
+      </div>
+      <div
+        class="col-xs-6 col-sm-8"
+        ng-if="!detailsTab.uiOptions.times.from.maxAmount">
+        <div class="text-muted control-label">
+          Please select a "from" time
         </div>
       </div>
-      <div class="col-xs-6 col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
-        <crm-loading
-          show="!detailsTab.loading.toDayTypes"
-          class="chr_leave-request-modal__small_spinner">
-          <div class="crm_custom-select crm_custom-select--full">
-            <select
-              class="no-select2"
-              name="toDayTypeSelect"
+    </div>
+  </div>
+</div>
+<div ng-hide="!detailsTab.uiOptions.multipleDays">
+  <div class="row">
+    <div class="col-xs-12 form-horizontal">
+      <div class="form-group">
+        <label class="col-sm-4 control-label required-mark">
+          To Date{{ detailsTab.selectedAbsenceType.calculation_unit_name === 'hours' ? '/Time' : ''}}
+        </label>
+        <div class="col-xs-6 col-sm-4 chr_leave-request-date-picker-container">
+          <div class="input-group">
+            <input
+              type="text"
+              class="form-control"
+              uib-datepicker-popup
+              datepicker-options="detailsTab.uiOptions.date.to.options"
+              show-button-bar="false"
+              ng-model="detailsTab.uiOptions.toDate"
+              is-open="detailsTab.uiOptions.date.to.show"
+              ng-readonly="true"
               ng-disabled="!detailsTab.isRole('admin') &&
                 (detailsTab.isMode('view') || !detailsTab.request.from_date || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-              ng-options="dayType.value as dayType.label for dayType in detailsTab.requestToDayTypes"
-              ng-model="detailsTab.request.to_date_type"
-              ng-change="detailsTab.calculateBalanceChange()">
-              <option value="">Select</option>
-            </select>
+              ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.toDate, 'to')"/>
+          </div>
+        </div>
+        <div class="col-xs-6 col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
+          <crm-loading
+            ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'days'"
+            show="!detailsTab.loading.toDayTypes"
+            class="chr_leave-request-modal__small_spinner">
+            <div class="crm_custom-select crm_custom-select--full">
+              <select
+                class="no-select2"
+                name="toDayTypeSelect"
+                ng-disabled="!detailsTab.isRole('admin') &&
+                  (detailsTab.isMode('view') || !detailsTab.request.from_date || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
+                ng-options="dayType.value as dayType.label for dayType in detailsTab.requestToDayTypes"
+                ng-model="detailsTab.selectedAbsenceType.calculation_unit_name === 'days' ? detailsTab.request.to_date_type : null"
+                ng-change="detailsTab.calculateBalanceChange()">
+                <option value="">Select</option>
+              </select>
+              <span class="crm_custom-select__arrow"></span>
+            </div>
+          </crm-loading>
+          <div
+            class="crm_custom-select crm_custom-select--full"
+            ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'hours'">
+            <select
+              class="no-select2"
+              ng-model="detailsTab.uiOptions.times.to.time"
+              ng-disabled="detailsTab.uiOptions.times.to.disabled"
+              timepicker-select
+              timepicker-select-time-from="detailsTab.uiOptions.times.to.min"
+              timepicker-select-time-to="detailsTab.uiOptions.times.to.max"
+              timepicker-select-interval="15"
+              timepicker-select-placeholder="Select time"
+            ></select>
             <span class="crm_custom-select__arrow"></span>
           </div>
-        </crm-loading>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row" ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'hours'">
+    <div class="col-xs-12 form-horizontal">
+      <div class="form-group">
+        <label class="col-sm-4 control-label required-mark">Deduction</label>
+        <div class="col-xs-6 col-sm-4">
+          <time-amount-picker
+            ng-if="detailsTab.uiOptions.times.to.maxAmount"
+            time-amount-picker-value='detailsTab.uiOptions.times.to.amount'
+            time-amount-picker-min-amount='0.25'
+            time-amount-picker-max-amount='detailsTab.uiOptions.times.to.maxAmount'
+            time-amount-picker-interval='15'
+          ></time-amount-picker>
+        </div>
+        <div
+          class="col-xs-6 col-sm-8"
+          ng-if="!detailsTab.uiOptions.times.to.maxAmount">
+          <div class="text-muted control-label">
+            Please select a "to" time
+          </div>
+        </div>
       </div>
     </div>
   </div>
