--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-details-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-details-tab.html
@@ -15,7 +15,8 @@
           || detailsTab.isLeaveStatus(detailsTab.statusNames.moreInformationRequired)
           || !detailsTab.request.status_id">
         <div class="col-xs-6 col-sm-4">Opening Balance</div>
-        <div class="col-xs-6 col-sm-8">{{detailsTab.balance.opening}}</div>
+        <div class="col-xs-6 col-sm-8">{{ detailsTab.balance.opening |
+          timeUnitApplier : detailsTab.selectedAbsenceType.calculation_unit_name }}</div>
       </div>
       <div
         ng-show="detailsTab.isLeaveType('toil')"
@@ -23,7 +24,8 @@
         <div class="col-xs-4">
           Change
         </div>
-        <div class="col-xs-8">{{detailsTab.balance.change.amount}}</div>
+        <div class="col-xs-8">{{ detailsTab.balance.change.amount |
+          timeUnitApplier : detailsTab.selectedAbsenceType.calculation_unit_name }}</div>
       </div>
       <div ng-hide="detailsTab.isLeaveType('toil')">
         <div
@@ -36,7 +38,8 @@
               ng-class="{ 'fa-chevron-right': !detailsTab.uiOptions.isChangeExpanded, ' fa-chevron-down': detailsTab.uiOptions.isChangeExpanded }"></i>
             Change
           </div>
-          <div class="col-xs-6 col-sm-8">{{detailsTab.balance.change.amount}}</div>
+          <div class="col-xs-6 col-sm-8">{{ detailsTab.balance.change.amount |
+            timeUnitApplier : detailsTab.selectedAbsenceType.calculation_unit_name }}</div>
         </div>
         <div class="table-responsive">
           <table
@@ -45,15 +48,18 @@
             <thead>
               <tr>
                 <th>Date</th>
-                <th>Selection</th>
+                <th ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'days'">
+                  Selection</th>
                 <th>Amount</th>
               </tr>
             </thead>
             <tbody>
               <tr ng-repeat="breakdown in detailsTab.pagination.filteredbreakdown">
-                <td>{{breakdown.date | date:'EEE '+ detailsTab.uiOptions.userDateFormat}}</td>
-                <td>{{breakdown.type.label}}</td>
-                <td>{{breakdown.amount}}</td>
+                <td>{{ breakdown.date | date:'EEE '+ detailsTab.uiOptions.userDateFormat }}</td>
+                <td ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'days'">
+                  {{ breakdown.type.label }}</td>
+                <td>{{ breakdown.amount |
+                  timeUnitApplier : detailsTab.selectedAbsenceType.calculation_unit_name }}</td>
               </tr>
             </tbody>
             <tfoot>
@@ -81,7 +87,8 @@
                         || detailsTab.isLeaveStatus(detailsTab.statusNames.moreInformationRequired)
                         || !detailsTab.request.status_id">
         <div class="col-xs-6 col-sm-4">Closing Balance</div>
-        <div class="col-xs-6 col-sm-8">{{detailsTab.balance.closing}}</div>
+        <div class="col-xs-6 col-sm-8">{{ detailsTab.balance.closing |
+          timeUnitApplier : detailsTab.selectedAbsenceType.calculation_unit_name }}</div>
       </div>
     </div>
   </crm-loading>
