--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -14,6 +14,7 @@ $chr-user-menu-line-height: 60px;
 $chr-user-menu-minify-breakpoint: 1250px;
 $chr-user-menu-bg-hover: $gray-lighter;
 $chr-user-menu-dropdown-bg: $crm-white;
+$chr-user-menu-dropdown-username-color: $gray-darker;
 $chr-user-menu-dropdown-link-color: $gray-darker;
 $chr-user-menu-dropdown-link-color-hover: $gray-darker;
 $chr-user-menu-dropdown-link-bg-hover: $gray-lighter;
