PCHR-2832: Sync overridden Navigation.php file with CiviCRM 4.7.27

--- a/hrui/css/hrui.css
+++ b/hrui/css/hrui.css
@@ -84,3 +84,10 @@ body:not(.toolbar-drawer) {
   margin-right: 1%;
 }
 
+#civicrm-menu .crm-logo-sm {
+  background: url('../../assets/civihr.png') !important;
+  background-size: 20px 20px !important;
+  height: 20px !important;
+  width: 20px !important;
+}
+
