--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlement-change-log.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlement-change-log.html
@@ -28,10 +28,14 @@
       <tbody>
         <tr ng-repeat="change in changeLog.changeLogRows">
           <td>{{change.date.format('DD/MM/YYYY')}}</td>
-          <td ng-repeat="entitlement in change.entitlements">
+          <td ng-repeat="entitlement in change.entitlements" ng-class="{'bg-info': entitlement === change.highlightedEntitlement}">
             {{entitlement.entitlement_amount | timeUnitApplier:entitlement.calculation_unit}}
           </td>
-          <td></td>
+          <td>
+            <span ng-if="change.highlightedEntitlement">
+              {{change.highlightedEntitlement.comments}}
+            </span>
+          </td>
         </tr>
       </tbody>
     </table>
