PCHR-2713: Fix annual entitlement typo

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlement-change-log.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlement-change-log.html
@@ -4,7 +4,7 @@
     ng-click="changeLog.dismissModal()">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h3 class="panel-title">Anual entitlement change log</h3>
+    <h3 class="panel-title">Annual entitlement change log</h3>
     <p>
       Period {{changeLog.absencePeriod.title}} -
       from {{changeLog.absencePeriod.start_date | date:'MMM dd, yyyy'}}
