--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/toil.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/toil.html
@@ -1,13 +1,13 @@
-<div class="row">
+<div class="row"
+  ng-init="__isNotEditable = !detailsTab.isRole('admin') && (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create')))">
   <div class="col-xs-12 form-horizontal">
     <div class="row">
-      <label class="col-sm-4 control-label">Duration</label>
+      <label class="col-sm-4 control-label required-mark">Duration</label>
       <div class="col-xs-6 col-sm-4 chr_leave-request-modal__input-shift-left">
         <div class="crm_custom-select crm_custom-select--full">
           <select name="hours" ng-model="detailsTab.request.toilDurationHours"
             class="no-select2"
-            ng-disabled="!detailsTab.isRole('admin') &&
-              (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create')))"
+            ng-disabled="__isNotEditable"
             ng-change="detailsTab.request.updateDuration()">
             <option value="0" selected="selected">Hours</option>
             <option value="1">1h</option>
@@ -31,8 +31,7 @@
           <select name="minutes" ng-model="detailsTab.request.toilDurationMinutes"
             class="no-select2"
             ng-change="detailsTab.request.updateDuration()"
-            ng-disabled="!detailsTab.isRole('admin') &&
-              (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create')))">
+            ng-disabled="__isNotEditable">
             <option value="0">Mins</option>
             <option value="5">5m</option>
             <option value="10">10m</option>
@@ -54,9 +53,13 @@
   <div class="col-xs-12 form-horizontal">
     <hr>
     <div class="row">
-      <div class="col-xs-12"><p>TOIL to be Accrued:</p></div>
       <div class="col-xs-12">
-        <div class="crm_custom-select crm_custom-select--full">
+        <label class="control-label required-mark">TOIL to be Accrued</label>
+      </div>
+      <div class="col-xs-12">
+        <div
+          class="crm_custom-select crm_custom-select--full"
+          ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'days'">
           <select
             class="no-select2"
             name="toilAmount"
@@ -68,6 +71,15 @@
           </select>
           <span class="crm_custom-select__arrow"></span>
         </div>
+        <time-amount-picker
+          class="crm_custom-select crm_custom-select--full"
+          ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'hours'"
+          time-amount-picker-disabled="detailsTab.isMode('view')"
+          time-amount-picker-value="detailsTab.request.toil_to_accrue"
+          time-amount-picker-min-amount="0"
+          time-amount-picker-max-amount="22"
+          time-amount-picker-interval="15"
+        ></time-amount-picker>
       </div>
     </div>
   </div>
